# mcp-pet-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
servers/: weather_server.py
